--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,6 @@
-# Compiled source #
-###################
-*~
-*.out
-*.gch
-*.exe
-.vscode
-*.pyc
-*.o
-*__init__.py
-.DS_Store
+# Ignorar todos los archivos y directorios externos
+/*
+
+# Permitir la carpeta clonada y su contenido
+!.gitignore
+!*/
