--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Ignorar todos los archivos y directorios externos
 /*
 
-# Permitir la carpeta clonada y su contenido
+# Excepto los archivos en el directorio raíz
+!/*
+
+# Excepto el archivo .gitignore
 !.gitignore
-!*/
